src/objects/ANG_CalloutMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Newgen ISS Callout Mapping</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalloutClass__c</fullName>
        <description>Callout Class Implementation</description>
        <label>Callout Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Code__c</fullName>
        <label>Change_Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>field match</description>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_System__c</fullName>
        <label>Integration System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>object match type</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldValue__c</fullName>
        <label>Trigger when Field Equal To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Newgen ISS Callout Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Action__c</columns>
        <columns>Type__c</columns>
        <columns>Field__c</columns>
        <columns>fieldValue__c</columns>
        <columns>Event_Type__c</columns>
        <columns>CalloutClass__c</columns>
        <columns>client_id__c</columns>
        <columns>client_secret__c</columns>
        <columns>Credential__c</columns>
        <columns>Named_Credential__c</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>